--- a/main.style.css
+++ b/main.style.css
@@ -6,18 +6,19 @@
     --animation-delay: 1000ms;
 }
 
+/* General styles */
 body {
-    background-color: var(--bg-color);
     display: flex;
-    margin: 0px;
-    padding: 0px;
-    min-height: 100vh;
     align-items: center;
-    justify-content: center;
+    height: 100vh;
+    min-height: 280px;
+    min-width: 570px;
+    margin: 0;
+    padding: 0;
+    background-color: var(--bg-color);
     position: relative;
     opacity: var(--load-animation);
-    animation: fade-in 2s forwards;
-    animation-delay: var(--animation-delay);
+    animation: fade-in 2s forwards var(--animation-delay);
 }
 
 @keyframes fade-in {
@@ -35,20 +36,44 @@ body {
     flex-direction: column;
     align-items: flex-start;
     gap: 32px;
-    width: 100vw;
     padding: 184px;
+    max-width: 100vw;
 }
 
-.countdown-container {
-    display: flex;
-    align-items: flex-start;
-    gap: 5px;
-    align-self: stretch;
+/* Typography */
+h1,
+h2,
+p {
+    margin: 0;
+    color: var(--primary-color);
+}
+
+h1 {
+    font-size: 104px;
+    font-family: 'Abril Fatface', sans-serif;
+    line-height: 90%;
+}
+
+h2 {
+    font-size: 72px;
+    font-family: 'Abril Fatface', cursive;
+    line-height: 90%;
+}
+
+p {
     font-size: 24px;
     font-family: 'Libre Baskerville', serif;
-    font-weight: 400;
+    line-height: 112%;
+}
+
+/* Countdown styles */
+.countdown-container {
+    display: flex;
+    align-items: baseline;
+    gap: 5px;
+    font-size: 24px;
+    font-family: 'Libre Baskerville', serif;
     line-height: 110%;
-    margin: 0px;
     color: var(--primary-color);
 }
 
@@ -57,31 +82,30 @@ body {
 }
 
 .countdown-count {
-    font-style: bold;
+    font-weight: bold;
 }
 
+/* Social icons */
 .socials-container {
     display: flex;
     align-items: center;
     gap: 16px;
-    margin: 0px;
 }
 
 .social-icons-container {
     display: flex;
     align-items: flex-end;
     gap: 8px;
-    margin: 0px;
 }
 
 .socials-text {
-    color: var(--primary-color);
     font-size: 14px;
-    font-family: Libre Baskerville;
+    font-family: 'Libre Baskerville', serif;
     font-style: italic;
     font-weight: 400;
     line-height: 130%;
-    margin: 0px;
+    color: var(--primary-color);
+    margin: 0;
 }
 
 .social-icon {
@@ -89,17 +113,14 @@ body {
     height: 24px;
     fill: var(--primary-color);
     transition: transform 0.3s ease;
-    margin: 0px;
 }
 
 .social-icon:hover {
     transform: scale(1.2);
 }
 
+/* Background and stars */
 .background {
-    height: 100vh;
-    width: 100vw;
-    color: #FFBBCC;
     position: absolute;
     top: 0;
     left: 0;
@@ -140,12 +161,11 @@ body {
     right: 80px;
 }
 
+/* Control icons */
 .control-icons-container {
-    display: inline-flex;
-    padding: 8px;
+    display: flex;
     align-items: flex-start;
     gap: 16px;
-    margin: 0px;
     position: absolute;
     top: 80px;
     right: 144px;
@@ -157,38 +177,170 @@ body {
     height: 24px;
     fill: var(--primary-color);
     transition: transform 0.3s ease;
-    margin: 0px;
 }
 
 .control-icon:hover {
     transform: scale(1.2);
 }
 
-h1 {
-    color: var(--primary-color);
-    font-size: 104px;
-    font-family: 'Abril Fatface', sans-serif;
-    line-height: 90%;
-    margin: 0px;
+/* Responsive styles */
+@media (max-width: 1430px) {
+    .countdown-text {
+        display: none;
+    }
+
+    h1 {
+        font-size: 88px;
+    }
+
+    .container {
+        padding: 136px;
+    }
 }
 
-h2 {
-    color: var(--primary-color);
-    font-size: 72px;
-    font-family: 'Abril Fatface', cursive;
-    line-height: 90%;
-    margin: 0px;
+@media (max-width: 768px) {
+    body {
+        justify-content: center;
+    }
+
+    .container {
+        gap: 16px;
+        padding: 32px;
+    }
+
+    h1 {
+        font-size: 64px;
+    }
+
+    h2 {
+        font-size: 48px;
+        text-align: center;
+    }
+
+    p {
+        font-size: 24px;
+        text-align: center;
+    }
+
+    .star.top-left,
+    .star.bottom-left {
+        left: 32px;
+    }
+
+    .star.top-right,
+    .star.bottom-right {
+        right: 32px;
+    }
+
+    .star.top-left,
+    .star.top-right {
+        top: 72px;
+    }
+
+    .star.bottom-left,
+    .star.bottom-right {
+        bottom: 72px;
+    }
+
+    .social-icons-container {
+        position: absolute;
+        bottom: 80px;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+
+    .socials-text {
+        display: none;
+    }
+
+    .control-icons-container {
+        right: 96px;
+        top: 72px;
+    }
+
+    .adaptive-br {
+        display: block;
+    }
 }
 
-p {
-    color: var(--primary-color);
-    font-size: 24px;
-    font-family: 'Libre Baskerville', serif;
-    line-height: 112%;
-    margin: 0px;
+@media (max-height: 480px) {
+    body {
+        justify-content: center;
+    }
+
+    .container {
+        align-items: center;
+        gap: 16px;
+        padding: 32px;
+    }
+
+    .countdown-container {
+        align-items: center;
+        justify-content: center;
+    }
+
+    .countdown-count {
+        justify-content: center;
+        align-items: center;
+    }
+
+    h1 {
+        font-size: 64px;
+        text-align: center;
+    }
+
+    h2 {
+        font-size: 48px;
+    }
+
+    p {
+        font-size: 24px;
+    }
+
+    .star.top-left,
+    .star.bottom-left {
+        left: 32px;
+    }
+
+    .star.top-right,
+    .star.bottom-right {
+        right: 32px;
+    }
+
+    .star.top-left,
+    .star.top-right {
+        top: 72px;
+    }
+
+    .star.bottom-left,
+    .star.bottom-right {
+        bottom: 72px;
+    }
+
+    .social-icons-container {
+        position: absolute;
+        bottom: 80px;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+
+    .countdown-text,
+    .socials-text {
+        display: none;
+    }
+
+    .control-icons-container {
+        right: 96px;
+        top: 72px;
+    }
+
+    .adaptive-br {
+        display: block;
+    }
 }
 
-.emoji {
-    color: var(--primary-color);
-    font-family: 'Noto Emoji', sans-serif;
+@media (max-height: 380px) {
+    .social-icons-container {
+        display: none;
+    }
 }
