--- a/main.style.css
+++ b/main.style.css
@@ -11,6 +11,7 @@ body {
     display: flex;
     align-items: center;
     height: 100vh;
+    width: 100vw;
     min-height: 280px;
     min-width: 570px;
     margin: 0;
